Changes between 2.2 and 2.3:
----------------------------
  * Fix potential segfault in aggregartp
  * Do not do retx in reordertp with multicast inputs
  * Add support for null weights in aggregartp and reordertp

Changes between 2.1 and 2.2:
----------------------------
  * Various portability fixes
  * Fix off-by-one error in directory input
  * Don't bail out on missing segments
  * Add option to shift segment start
  * Fix incomplete read from FIFOs
  * Fix ingesTS behaviour with more than 1 PCR/packet

Changes between 2.0 and 2.1:
----------------------------
  * FreeBSD and Mac OS X support
  * Support for changing source address with raw sockets
  * Fix overflow in date calculation on 32 bit platforms
  * New fd= interface option
  * Reorder packets based on sequence numbers instead of timestamps
  * Add ability to cap the number of retx requests in reordertp
  * Allow retransmission to work without a dedicated connection
  * Add options to fix continuity counters and restamp dates
  * Use SO_BINDTODEVICE to bind to a specific interface
  * Add option for syslog logging
  
Changes between 1.0 and 2.0:
----------------------------
  * Support for directory input/output, where the stream is stored into
    "chunks" of fixed duration, accompanied with their auxiliary file
  * Support for TCP sockets in multicat, aggregartp and reordertp (/tcp)
  * Merge OffseTS functionality into multicat itself (-k and -d)
  * New program multicat_validate to validate directory inputs
  * New program lasts to determine the duration of an aux file
  * Support for IPv6
  * Add DVBlast-style options for host parsing (ifindex, ifaddr, ttl and tos)
  * Add the ability to output a stream as fast as possible (-f)
  * Renamed desaggregartp to reordeRTP
  * Support for packet retransmission between aggregaRTP and reordeRTP
  * Use biTStream instead of internal parsing functions
  * Removed limits on number of inputs/outputs in aggregaRTP and reordeRTP